# Cisco-Config-Generator

./: .gitignore  Issues and improvements.txt  LICENSE  README.md  pyproject.toml  requirements.txt  run.bat  setup.bat
.github/workflows/: test.yml
assets/: sample_intent.xlsx  workbook_template.xlsx
cisco_config_generator/: __about__.py  __init__.py  __main__.py  cli.py  logging_setup.py  orchestrator.py  pack_loader.py  settings_loader.py  version.py
cisco_config_generator/rendering/: engine.py  registry.py  writers.py
cisco_config_generator/tui/: app.py
cisco_config_generator/workbook/: loader.py  models.py  validators.py
packs/default/: features.yaml  hardware_catalog.yaml  port_profiles.yaml  settings.yaml  template_map.yaml
packs/default/templates/: acls.j2  base.j2  interfaces_access.j2  interfaces_access_server.j2  interfaces_ap_trunk.j2  interfaces_trunk.j2  interfaces_trunk_portchannel.j2  interfaces_trunk_server.j2  interfaces_unused.j2  port_channels.j2  vlans.j2
scripts/: generate_sample_workbook.py  generate_workbook.py
tests/: test_orchestrator_integration.py  test_rendering.py  test_validators.py  test_workbook.py
