[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cisco-config-generator"
version = "0.2.0"
description = "Cisco IOS-XE access switch configuration generator"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Nautomation Prime" },
]
requires-python = ">=3.10"
dependencies = [
    "openpyxl>=3.1.0",
    "Jinja2>=3.1.0",
    "rich>=13.7.0",
    "textual>=0.79.1",
    "PyYAML>=6.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
]

[project.scripts]
cisco-config-generator = "cisco_config_generator.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cisco_config_generator*"]
