[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cisco-config-generator"
version = "0.3.0"
description = "Cisco IOS-XE access switch configuration generator"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Christopher Davies" },
]
requires-python = ">=3.10"
keywords = ["cisco", "config", "generator", "network", "jinja2", "excel"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "openpyxl>=3.1.0",
    "Jinja2>=3.1.0",
    "rich>=13.7.0",
    "textual>=0.79.1",
    "PyYAML>=6.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
]

[project.scripts]
cisco-config-generator = "cisco_config_generator.cli:main"

[project.urls]
Homepage = "https://github.com/Nautomation-Prime/Cisco-Config-Generator"
Repository = "https://github.com/Nautomation-Prime/Cisco-Config-Generator"
Releases = "https://github.com/Nautomation-Prime/Cisco-Config-Generator/releases"
Issues = "https://github.com/Nautomation-Prime/Cisco-Config-Generator/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["cisco_config_generator*"]
